[package]
name = "cgroups-rs"
description = "Native Rust crate for managing control groups on Linux"
repository = "https://github.com/kata-containers/cgroups-rs"
keywords = ["linux", "cgroup", "containers", "isolation"]
categories = ["os", "api-bindings", "os::unix-apis"]
license = "MIT OR Apache-2.0"
version = "0.2.6"
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>", "Levente Kurusa <lkurusa@acm.org>", "Sam Wilson <tecywiz121@hotmail.com>"]
edition = "2018"
homepage = "https://github.com/kata-containers/cgroups-rs"
readme = "README.md"

[dependencies]
async-stream = { version = "0.3.2", optional = true }
futures-core = { version = "0.3", optional = true }
libc = "0.2"
log = "0.4"
nix = "0.20.0"
regex = "1.1"
tokio = { version = "1.8", features = ["fs", "io-util"], optional = true }
tokio-eventfd = { version = "0.2.0", optional = true }

[dev-dependencies]
libc = "0.2.76"

[features]
default = []
async_events = ["async-stream", "futures-core", "tokio", "tokio-eventfd"]
